# pygoocanvas

./: .gitignore  AUTHORS  ChangeLog  ChangeLog-pre-git  MAINTAINERS  Makefile  Makefile.am  Makefile.in  NEWS  README.win32  aclocal.m4  arg-types.py  autogen.sh  config.h  config.h.in  config.status  configure  configure.ac  configure.in  goocanvas.defs  goocanvas.override  goocanvasmodule.c  libtool  pygoocanvas.doap  pygoocanvas.pc.in  setup.py
.deps/: goocanvas.Plo  goocanvasmodule.Plo
autom4te.cache/: output.0  output.1  output.2  output.3  requests  traces.0  traces.1  traces.2  traces.3
demo/: Makefile.am  animation_demo.py  arrowhead-demo.py  clipping_demo.py  custom-simple.py  custom.py  dashes.py  demo.py  features-demo.py  features_demo.py  fifteen-demo.py  fifteen_demo.py  grabs_demo.py  paths-demo.py  polyline-test.py  scalability_demo.py  simple-demo.py  table_demo.py  timer_demo.py
demo/customs/: custom-svg.py  custom.py
demo/misc/: dashes.py  gradient-demo.py  mv-simple-demo.py  simple-demo.py  swfdec-demo.py  units-demo.py
demo/mv_demo/: mv_animation_demo.py  mv_clipping_demo.py
demo/simple_demo/: clipping_demo.py  demo.py  events_demo.py  focus_demo.py  paths_demo.py  scalability_demo.py  table_demo.py
docs/: .gitignore  Makefile  Makefile.am  Makefile.in
docs/reference/: entities.docbook  pygoocanvas-canvas-item-model-simple.xml  pygoocanvas-canvas-item-simple.xml  pygoocanvas-canvas-item-view-simple.xml  pygoocanvas-canvas-item-view.xml  pygoocanvas-canvas-item.xml  pygoocanvas-canvas-model-simple.xml  pygoocanvas-canvas-model.xml  pygoocanvas-canvas-view.xml  pygoocanvas-canvas.xml  pygoocanvas-core-classes.xml  pygoocanvas-ellipse-model.xml  pygoocanvas-ellipse.xml  pygoocanvas-grid-model.xml  pygoocanvas-grid.xml  pygoocanvas-group-model.xml  pygoocanvas-group.xml  pygoocanvas-hierarchy.xml  pygoocanvas-image-model.xml  pygoocanvas-image.xml  pygoocanvas-item-model-simple.xml  pygoocanvas-item-model.xml  pygoocanvas-item-simple.xml  pygoocanvas-item.xml  pygoocanvas-misc-items.xml  pygoocanvas-misc.xml  pygoocanvas-model-items.xml  pygoocanvas-path-model.xml  pygoocanvas-path.xml  pygoocanvas-polyline-model.xml  pygoocanvas-polyline.xml  pygoocanvas-rect-model.xml  pygoocanvas-rect.xml  pygoocanvas-ref.xml  pygoocanvas-std-items.xml  pygoocanvas-style.xml  pygoocanvas-table-model.xml  pygoocanvas-table.xml  pygoocanvas-text-model.xml  pygoocanvas-text.xml  (+1 more)
tests/: runtests.py  test_ellipse_item.py  test_grid_item.py  test_image_item.py  test_item.py  test_polyline_item.py  test_rect_item.py  test_table_item.py  test_text_item.py  test_widget_item.py
