## Process this file with automake to produce Makefile.in

EXTRA_DIST =	simple-demo.py		\
		fifteen_demo.py		\
		features_demo.py	\
		custom.py 			\
		custom-simple.py	\
		paths_demo.py		\
		dashes.py			\
		arrowhead_demo.py	\
		mv-simple-demo.py	\
		demo.py				\
		events_demo.py		\
		flower.png			\
		focus_demo.py		\
		grabs_demo.py		\
		polyline-test.py	\
		scalability_demo.py	\
		table_demo.py		\
		toroid.png			\
		timer_demo.py		\
		clipping_demo.py	\
        animation_demo.py

