## Process this file with automake to produce Makefile.in

EXTRA_DIST =	misc/simple-demo.py		\
		misc/dashes.py			\
		misc/polyline-test.py		\
		misc/mv-simple-demo.py 		\
		misc/timer_demo.py		\
		misc/units-demo.py 		\
		customs/custom-simple.py 	\
		customs/custom.py 		\
		images/toroid.png		\
		images/flower.png		\
		simple_demo/fifteen_demo.py	\
		simple_demo/features_demo.py 	\
		simple_demo/paths_demo.py	\
		simple_demo/arrowhead_demo.py	\
		simple_demo/demo.py		\
		simple_demo/events_demo.py	\
		simple_demo/focus_demo.py	\
		simple_demo/grabs_demo.py	\
		simple_demo/scalability_demo.py	\
		simple_demo/table_demo.py	\
		simple_demo/clipping_demo.py	\
		simple_demo/animation_demo.py 	\
		mv_demo/mv_animation_demo.py 	\
		mv_demo/mv_clipping_demo.py
